syntax = "proto3";

option go_package = "sigmaos/realm/proto";

message MakeReq {
  string realm = 1;
  string network = 2;
  int64 numS3 = 3;
  int64 numUX = 4;
}

message MakeRep {
  repeated string namedAddr = 1;
}

message RemoveReq {
  string realm = 1;
}

message RemoveRep {
}

